<resources>
    <string name="app_name">Kidz</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètre</string>
    <string name="inscription_title">Inscription</string>
    <string name="recherche">Recherche</string>

    <string name="menu_home">Catégories</string>
    <string name="menu_gallery">Les vidéos</string>
    <string name="menu_slideshow">A propos de nous</string>

    <string name="menu_logout">Déconnexion</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Videos</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Automatically play videos</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notificaton_channel_id">channelID</string>
    <string name="notification_channel_title">channelTitle</string>
    <string name="notification_channe_desc">channelDescription</string>
    <string name="nom_et_prenom">Nom et prénom</string>
    <string name="login">Login</string>
    <string name="mail">Email</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="motdepasse2">Retaper le mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="rechercher_une_video">Rechercher une vidéo</string>


</resources>