<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/category"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/favorite"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/about"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/menu_logout"
            android:visible="true" />
    </group>

</menu>
