<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationActivity">
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/inscription_title"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/nomPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"


        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="196dp"
        android:hint="@string/nom_et_prenom"
        android:drawableLeft="@drawable/user"
        />
    <EditText
        android:id="@+id/loginString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"


        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="196dp"
        android:hint="@string/login"
        android:drawableLeft="@drawable/user"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"


        android:layout_centerHorizontal="true"
        android:layout_marginTop="185dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="196dp"
        android:hint="@string/mail"
        android:drawableLeft="@drawable/mail"
        />
    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"


        android:layout_centerHorizontal="true"
        android:layout_marginTop="235dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="196dp"
        android:hint="@string/motdepasse"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"


        android:layout_centerHorizontal="true"
        android:layout_marginTop="285dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="196dp"
        android:hint="@string/motdepasse2"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        />
        <Button
            android:id="@+id/btn_insc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password2"
            android:layout_marginTop="35dp"
            android:text="@string/s_inscrire"
            android:layout_centerHorizontal="true" />



</RelativeLayout>